--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,46 +1,15 @@
 version: '3.6'
 services:
-  postgres:
-    image: postgres:14
-    restart: always
-    volumes:
-      - postgres-data:/var/lib/postgresql/data
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgrespassword
-
-  cockroach:
-    image: cockroachdb/cockroach:v22.2.0
-    command:
-      - start-single-node
-      - --insecure
-      - --accept-sql-without-tls
-    ports:
-      - '26257:26257'
-    environment:
-      COCKROACH_USER: 'root'
-      COCKROACH_DATABASE: 'hasura'
-    volumes:
-      - '${PWD}/cockroach-data:/cockroach/cockroach-data'
-
   hasura:
-    image: hasura/graphql-engine:v2.15.2.cli-migrations-v3
+    image: hasura/graphql-engine:v2.16.1.cli-migrations-v3
     ports:
       - '8888:8080'
-    depends_on:
-      - 'postgres'
-      - 'cockroach'
     restart: always
     environment:
-      HASURA_GRAPHQL_METADATA_DATABASE_URL: postgres://postgres:postgrespassword@postgres:5432/postgres
-      HASURA_GRAPHQL_DATABASE_URL: postgresql://root@cockroach:26257/hasura
-      HASURA_GRAPHQL_ENABLE_CONSOLE: 'true'
+      HASURA_GRAPHQL_DATABASE_URL: ${HASURA_GRAPHQL_DATABASE_URL}
+      HASURA_GRAPHQL_ENABLE_CONSOLE: 'false'
       HASURA_GRAPHQL_DEV_MODE: 'true'
       HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
       HASURA_GRAPHQL_ADMIN_SECRET: secret
       HASURA_GRAPHQL_UNAUTHORIZED_ROLE: anyone
       HASURA_GRAPHQL_EXPERIMENTAL_FEATURES: naming_convention
-
-volumes:
-  postgres-data:
-  cockroach-data:
